finished without bonus
