# routes/auth.js
@@ -18,9 +18,11 @@ router.post("/Register", async (req, res, next) => {
       email: req.body.email
       // profilePic: req.body.profilePic
     }
+
     let users = [];
     users = await DButils.execQuery("SELECT username from users");
 
+    // username exists
     if (users.find((x) => x.username === user_details.username))
       throw { status: 409, message: "Username taken" };
 
@@ -33,7 +35,7 @@ router.post("/Register", async (req, res, next) => {
       `INSERT INTO users VALUES (0,'${user_details.username}', '${user_details.firstname}', '${user_details.lastname}',
       '${user_details.country}', '${hash_password}', '${user_details.email}')`
     );
-    res.status(201).send({ message: "user created", success: true });
+    res.status(201).send({ message: "User created", success: true });
   } catch (error) {
     next(error);
   }
@@ -59,10 +61,10 @@ router.post("/Login", async (req, res, next) => {
 
     // Set cookie
     req.session.user_id = user.user_id;
-
+    req.session.lastSearch = user.lastSearch;
 
     // return cookie
-    res.status(200).send({ message: "login succeeded", success: true });
+    res.status(200).send({ message: "Login succeeded", success: true });
   } catch (error) {
     next(error);
   }
@@ -70,7 +72,7 @@ router.post("/Login", async (req, res, next) => {
 
 router.post("/Logout", function (req, res) {
   req.session.reset(); // reset the session info --> send cookie when  req.session == undefined!!
-  res.send({ success: true, message: "logout succeeded" });
+  res.status(200).send({ success: true, message: "Logout succeeded" });
 });
 
 module.exports = router;
